--- a/packages/core/src/styles/layout/_type-horizontal.scss
+++ b/packages/core/src/styles/layout/_type-horizontal.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -57,8 +57,7 @@
       justify-content: stretch;
       flex-grow: 1;
 
-      & > *,
-      & > ::slotted(*) {
+      & > * {
         flex-grow: 1;
       }
     }
@@ -68,8 +67,7 @@
       align-content: stretch;
       flex-grow: 1;
 
-      & > *,
-      & > ::slotted(*) {
+      & > * {
         flex-grow: 1;
       }
     }
