--- a/packages/core/src/styles/layout/_type-vertical.scss
+++ b/packages/core/src/styles/layout/_type-vertical.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -48,8 +48,7 @@
     &[#{$layout}*='#{$align}#{$breakpoint}:#{$vertical-stretch}'] {
       justify-content: stretch;
 
-      & > *,
-      & > ::slotted(*) {
+      & > * {
         flex-grow: 1;
       }
     }
@@ -62,8 +61,7 @@
       align-items: stretch;
       justify-content: stretch;
 
-      & > *,
-      & > ::slotted(*) {
+      & > * {
         flex-grow: 1;
       }
     }
